--- a/SmartContract_Realestate/package.json
+++ b/SmartContract_Realestate/package.json
@@ -1,7 +1,17 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "build": "npx thirdweb@latest detect",
+    "deploy": "npx thirdweb@latest deploy",
+    "release": "npx thirdweb@latest release"
+  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@openzeppelin/contracts": "^4.8.1",
     "hardhat": "^2.12.6"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@thirdweb-dev/contracts": "^3.3.0",
+    "dotenv": "^16.0.3"
   }
 }
