--- a/realestate_frontend/package.json
+++ b/realestate_frontend/package.json
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.2",
+    "@prisma/client": "^4.9.0",
+    "alchemy-sdk": "^2.3.0",
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
+    "ethers": "^5.7.2",
     "mysql2": "^3.0.1",
     "next": "13.1.2",
     "next-auth": "^4.18.8",
+    "nodemailer": "^6.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "web3.storage": "^4.4.0",
-    "bootstrap": "^5.2.3"
+    "web3.storage": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4"
   }
 }
