--- a/realestate_frontend/package.json
+++ b/realestate_frontend/package.json
@@ -15,9 +15,11 @@
     "@prisma/client": "^4.9.0",
     "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
+    "moment": "^2.29.4",
     "next": "13.1.2",
     "next-auth": "^4.18.8",
     "nodemailer": "^6.9.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
@@ -28,5 +30,10 @@
     "postcss": "^8.4.21",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
