--- a/realestate_frontend/package.json
+++ b/realestate_frontend/package.json
@@ -26,6 +26,7 @@
     "web3.storage": "^4.4.0"
   },
   "devDependencies": {
+    "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prisma": "^4.9.0",
