--- a/realestate_frontend/package.json
+++ b/realestate_frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^2.0.13",
+    "@mui/material": "^5.11.6",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.2",
     "@prisma/client": "^4.9.0",
@@ -21,6 +24,7 @@
     "nodemailer": "^6.9.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "web3.storage": "^4.4.0"
